<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.AddSymbolFragment">

    <LinearLayout
        android:id="@+id/actionBar1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yo_l_belgisini_qo_shish"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/rasm_ustiga_bosing"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/_11ssp" />

    <HorizontalScrollView
        android:id="@+id/scrol1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        app:layout_constraintBottom_toTopOf="@id/scrol2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/yo_l_belgisining_nomi"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:textColorHint="@color/edtHintColor" />
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scrol2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style">

        <EditText
            android:id="@+id/edtAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/tavsif"
            android:padding="10dp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:textColorHint="@color/edtHintColor" />
    </ScrollView>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/edt_style"
            android:padding="2dp" />

        <TextView
            android:id="@+id/tvChecked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/edtColor"
            android:gravity="center_vertical"
            android:hint="@string/qaysi_turga_kirishi"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/edtHintColor"
            android:textSize="@dimen/_14ssp" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="0dp"
        app:cardElevation="5dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>












