<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.SymbolViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yo_l_belgisining_nomi"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSymbol"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/shlagbaumli_temir_yo_l_kesishmasi"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/tavsif_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
