<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSymbol"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnLike"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="6dp"
                android:src="@drawable/ic_heart_2" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnEdit"
                android:layout_below="@id/btnLike"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="2dp"
                android:text="@string/shlagbaumli_temir_yo_l_kesishmasi"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@id/btnDelete"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="4dp"
                app:strokeColor="@color/blue"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/o_zgartirish"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="4dp"
                app:strokeColor="@color/blue"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_delete" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/o_chirish"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>